# OpenSign-Darija

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  DATASET_CARD_KAGGLE_ALPHABET.md  DATASET_CARD_MENDELEY_MOSL.md  LICENSE  MODEL_CARD.md  MODEL_CARD_ALPHABET.md  Makefile  NOTICE  README.md  SPEECH_MODEL_CARD.md  THIRD_PARTY_DATASETS.md  docker-compose.yml
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/api/: deps.py
services/api/app/clients/: __init__.py  speech.py
services/api/app/core/: config.py  errors.py
services/api/app/db/: seed.py  session.py
services/api/app/jobs/: __init__.py  cleanup_expired_audio.py  cleanup_orphan_uploads.py
services/api/app/models/: __init__.py  dataset.py  enums.py  linguistics.py  message.py  recognition.py  sign.py  speech.py  user.py
services/api/app/schemas/: auth.py  dataset.py  external_datasets.py  messages.py  recognition.py  signs.py  speech.py  system.py
services/api/app/security/: passwords.py  tokens.py
services/api/app/services/: auth_service.py  inference_client.py  object_storage.py  recognition.py  request_protection.py  sign_speech.py  supported_signs.py
services/api/app/tools/: __init__.py  activate_mosl_word_smoke.py  register_mosl_word_smoke.py
services/api/migrations/: env.py
services/api/migrations/versions/: 20260716_0001_initial_schema.py  20260716_0002_dataset_collection.py  20260716_0003_model_registry_recognition.py  20260717_0004_messages_linguistics.py  20260717_0005_speech_audio.py  20260717_0006_external_datasets_multitask.py  20260719_0007_validated_smoke_model_status.py
services/api/opensign_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  test_auth.py  test_dataset_workflow.py  test_messages_linguistics.py  test_migrations.py  test_recognition_modes.py  test_signs_recognition.py  test_speech_audio.py  test_system.py
services/inference/: Dockerfile  README.md  pyproject.toml
services/inference/app/: main.py
services/inference/app/api/: routes.py
services/inference/app/core/: config.py
services/inference/app/model_package/: __init__.py  onnx_model.py
services/inference/app/models/: mock_model.py  model_metadata.py  onnx_model.py
services/inference/app/runtime/: __init__.py  model_loader.py  prediction.py
services/inference/app/schemas/: prediction.py
services/inference/app/services/: interfaces.py  model_loader.py  prediction_service.py
services/inference/opensign_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/inference/tests/: test_inference.py  test_landmark_prediction.py  test_word_model_package.py
services/speech/: Dockerfile  README.md  pyproject.toml
services/speech/app/: main.py  schemas.py
services/speech/app/api/: __init__.py  routes.py
services/speech/app/audio/: system_tts.py  waveform.py
services/speech/app/core/: config.py
services/speech/app/models/: synthesis_request.py  synthesis_result.py  voice.py
services/speech/app/preprocessing/: darija_normalizer.py  validation.py
services/speech/app/providers/: base.py  local.py  local_arabic_fallback.py  local_darija.py  registry.py  system_tts.py
services/speech/app/schemas/: __init__.py  synthesis.py
services/speech/app/services/: audio_validation.py  synthesis_service.py
services/speech/tests/: test_speech_service.py
(+537 files in other folders)
